Add Intel Xe GPU driver support

Add support for Intel GPUs using the Xe kernel driver (Arc series,
Battlemage, Lunar Lake, etc.) alongside existing i915 support.

- Add XeHelper binary for reading Xe PMU perf events and VRAM
- Add LinuxXeGpu device class with hwmon sensor discovery
- Detect xe vs i915 driver via udev_device_get_driver()
- Report GPU usage (Render, Video engines) and frequency via PMU
- Report temperature via hwmon
- Query VRAM total/used via DRM_IOCTL_XE_DEVICE_QUERY
- Make Xe support conditional on drm/xe_drm.h availability
- Set CAP_PERFMON capability on xe_helper binary

BUG: 512866