plugins/gpu/XeHelperLocation.h.cmake
@@ -1,0 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: 2025 Hunter Hardy <thehunterhardy@icloud.com>
+ *
+ * SPDX-License-Identifier: CC0-1.0
+ */
+
+#pragma once
+
+constexpr auto xeHelperLocation = "@KDE_INSTALL_FULL_LIBEXECDIR@/ksystemstats_xe_helper";
